# P2_OCR

./: Notebook.ipynb  README.md  pyproject.toml
