[tool.poetry]
name = "projet 2 OCR"
version = "0.1.0"
description = "Environnement virtuel projet 2 - OpenClassrooms"
authors = ["maxsch38"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
ipykernel = "^6.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
